--- a/src/MaiorNumero/app/src/main/res/values/strings.xml
+++ b/src/MaiorNumero/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Jogo do Maior Numero</string>
+    <string name="app_name">Jogo do maior número</string>
     <string name="clique_para_iniciar">Clique para iniciar</string>
 </resources>
